--- a/user/themes/brandguide/scss/components/_colorpalettes.scss
+++ b/user/themes/brandguide/scss/components/_colorpalettes.scss
@@ -220,12 +220,6 @@ body.color {
     }
   }
 
-  .childpage.title-section {
-    @include media-md {
-      margin-left: -#{$column * 4};
-    }
-  }
-
   .childpage:not(.title-section) {
     .section-title {
       @include h2;
